# whatsapper

./: .gitignore  README.md  pyproject.toml
src/whatsapper/: Whatsapper.py  __init__.py
