[project]
name = "whatsapper"
version = "0.1.0"
description = "A Python library to send messages via whatsapp web"
authors = [
    {name = "Atlantox", email = "atlantox7@gmail.com"},
]
dependencies = ["pytest-playwright>=0.7.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
